# ToDoList

./: AddTask.qml  CMakeLists.txt  Clock.qml  ClockForm.qml  Edit.qml  Main.qml  README.md  ShowTask.qml  database.cpp  database.h  main.cpp  qrc.qrc
source/: database.cpp  database.h  main.cpp
ui/: AddTask.qml  Clock.qml  ClockForm.qml  Edit.qml  Main.qml  ShowTask.qml
